--- a/css/main.css
+++ b/css/main.css
@@ -137,7 +137,7 @@ i {display: none;}
   .business_wrap .business p {box-sizing:border-box;text-align: left;padding: 0 10px;}
 
   .manage_wrap {padding-bottom: 70px;}
-  .manage_wrap .mng_title {position: absolute;left: 0;right: 0;top:auto;bottom: 34px;box-sizing:border-box;text-align: center;transition:all 0.4s}
+  .manage_wrap .mng_title {position: absolute;left: 0;right: 0;top: auto;bottom: 34px;box-sizing:border-box;text-align: center;transition:all 0.4s}
   .manage_wrap .mng_title h3 {margin-bottom: 26px;line-height: 30px;}
   .manage_wrap .mng_title p {line-height: 16px;}
   .manage_wrap .mng_img {display: block;width: 100%;height: 230px;padding: 0;transform:scale(1);transition:all 0.3s}
@@ -150,7 +150,7 @@ i {display: none;}
   .manage_wrap .slide i:after {content:'';display: block;position: absolute;right: 10px;top: 0;width: 1px;height: 21px;background: #099;}
 
   .manage_wrap .slide:hover .mng_img {opacity: 0;}
-  .manage_wrap .slide:hover .mng_title {border: none;bottom: 90px;padding: 33px 0;}
+  .manage_wrap .slide:hover .mng_title {border: none;bottom: 123px;}
   .manage_wrap .slide:hover i {opacity: 1;transform:rotate(360deg);}
   .manage_wrap .slide:hover a {box-sizing:border-box;border: 1px solid #099;}
   .manage_wrap .slide:hover a:before {transform:translateX(-50%) scale(1);}
